<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_date_filter_border" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emeraldDateFilterConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/emeraldImgCalendarDate"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_calendar_green_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/emeraldImgCalendarDate"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emeraldTextDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/emerald_date_filter_title"
                android:textSize="16sp"
                tools:text="Personalizado" />

            <TextView
                android:id="@+id/emeraldTextDateRangeSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/emerald_date_filter_subtitle"
                tools:text="07/08/18" />

        </LinearLayout>

        <br.com.stone.emeraldcomponents.basic.EmeraldButton
            android:id="@+id/emeraldDateFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/emerald_date_filter_button"
            app:emeraldButtonStyle="text"
            app:emeraldButtonType="primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emeraldDateFilterExpandConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emeraldDateFilterConstraint">

        <TextView
            android:id="@+id/emeraldDateFilterStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:textColor="@color/emerald_date_filter_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/emeraldDateSeparationView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="01/08/2018" />

        <View
            android:id="@+id/emeraldDateSeparationView"
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:background="@color/emerald_date_filter_title"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintBottom_toBottomOf="@id/emeraldDateFilterEndDate"
            app:layout_constraintEnd_toStartOf="@id/emeraldDateFilterEndDate"
            app:layout_constraintStart_toEndOf="@id/emeraldDateFilterStartDate"
            app:layout_constraintTop_toTopOf="@id/emeraldDateFilterEndDate" />

        <TextView
            android:id="@+id/emeraldDateFilterEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:textColor="@color/emerald_date_filter_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emeraldDateSeparationView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="01/08/2018" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>