<resources>
    <string name="emerald_total_sold">TOTAL VENDIDO:</string>
    <string name="emerald_last_days">Ultimos 7 dias</string>

    <!--Login component strings-->
    <string name="emerald_mask_error">Valor inválido</string>
    <string name="emerald_empty_field">Campo não pode ser vazio</string>
    <string name="emerald_invalid_email">Email inválido</string>
    <string name="emerald_invalid_auto_complete_text">Valor não condiz com nenhuma opção</string>

    <!-- Button component strings -->
    <string name="emerald_button_default_text">BUTTON</string>

    <!-- Sling Date Filter -->
    <string name="emerald_date_filter_option_today">Hoje</string>
    <string name="emerald_date_filter_option_yesterday">Ontem</string>
    <string name="emerald_date_filter_option_last_7_days">Últimos 7 dias</string>
    <string name="emerald_date_filter_option_last_30_days">Últimos 30 dias</string>
    <string name="emerald_date_filter_option_this_month">Este mês</string>
    <string name="emerald_date_filter_option_last_month">Mês passado</string>
    <string name="emerald_date_filter_option_personalized">Personalizado</string>
    <string name="emerald_date_filter_date_range">%1$s a %2$s</string>
    <string name="emerald_date_filter_button">FILTRAR</string>
    <string name="emerald_date_filter_startdate_after_enddate_error">A data inicial não pode ser maior que a data final</string>
    <string name="emerald_date_filter_range_bigger_then_range_error">Por favor, escolha um período de até %1$d dias.</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
</resources>
